# prototype-scalper

./: .replit  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md  vite.config.ts
.migration-backup/: .gitignore  index.html  pnpm-lock.yaml  tsconfig.json  vercel.json
.migration-backup/quant-ia/: .env.example  .gitignore  main.py  pyproject.toml
.migration-backup/quant-ia/api/: server.py
.migration-backup/quant-ia/core/: edge_gate.py  recommendation.py  shadow_sampler.py
.migration-backup/quant-ia/layers/: strategic.py  tactical.py
.migration-backup/quant-ia/tests/: test_runtime_regressions.py  test_signal_learning.py
attached_assets/: Pasted--BingX-Execution-Backend-Backend-Node-js-do-BingX-Futur_1781056610969.txt  Pasted--Colors-neon-green-rgb-142-215-52-neon-greenshadow-rgba_1780937358854.txt  Pasted--Dados-e-Candles-Act-as-a-principal-market-data-and-qua_1780884042558.txt  Pasted--Gaps-identificados-e-corrigidos-1-BatchTriggerOrchestr_1781057157115.txt  Pasted--I-Avan-os-Cr-ticos-para-o-Pr-ximo-N-vel-do-Edge-1-Sinc_1781049731308.txt  Pasted--Implementar-Latency-Slippage-Execution-Auditor-Objetiv_1780939224654.txt  Pasted--QUANT-BRAIN-API-TOKEN-ed9f59a595c8e84a8457382320727a20_1780967134261.txt  Pasted--Quant-Brain-Servi-o-Python-FastAPI-de-intelig-ncia-qua_1781056562066.txt  Pasted--RELAT-RIO-T-CNICO-PIPELINE-DE-RE-TREINAMENTO-AUT-NOMO-_1781049929206.txt  Pasted--Scalp-Bot-Execution-QUANT-QUAN-1780868433798_1780868433799.txt  Pasted-2-Aprender-com-MFE-MAE-Registrar-para-cada-trade-max-fa_1780939064541.txt  (+41 more)
(+283 files in other folders)
