[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.14.1",
    "aiosqlite>=0.22.1",
    "anthropic>=0.107.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "numpy>=2.4.6",
    "scikit-learn>=1.9.0",
    "uvicorn>=0.49.0",
]
