[project]
name = "quant-brain"
version = "1.0.0"
description = "Standalone quantitative intelligence service for BingX futures telemetry and market analysis."
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "anthropic>=0.20.0",
    "fastapi>=0.100.0",
    "httpx>=0.26.0",
    "numpy>=1.26.0",
    "joblib>=1.3.0",
    "scikit-learn>=1.4.0",
    "uvicorn>=0.24.0",
]

[project.scripts]
quant-brain = "main:main"
